--- a/viewer.html
+++ b/viewer.html
@@ -7,37 +7,108 @@
 
   <style>
     body {
-      font-family: Monospace;
+      font-family: sans-serif;
       background-color: #000000;
       color: #fff;
       margin: 0px;
       overflow: hidden;
     }
 
-    #info {
-      color: #fff;
-      position: absolute;
-      top: 10px;
-      width: 100%;
-      text-align: center;
-      z-index: 100;
-      display: block;
+    .topbar {
+    	position: absolute;
+    	top: 0;
+    	left: 0;
+    	width: 100%;
+    	height: 50px;
+    	z-index: 999;
     }
 
-    #pickfile {
-      color: #fff;
-      position: absolute;
-      top: 40px;
-      width: 100%;
-      text-align: center;
-      z-index: 100;
-      display: block;
+    .topbar-items {
+    	display: flex;
+    	flex-direction: row;
+    	height: 100%;
+    	color: rgba(255, 255, 255, 0.7);
+    	text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
     }
 
-    a {
-      color: skyblue
+    .top-button {
+    	display: flex;
+    	align-items: center;
+    	justify-content: center;
+    	flex: 1 0 50%;
+    }
+
+    .menu-button {
+			background: #234f77;
+			z-index: 5;
+    }
+
+    .new-texture-btn {
+    	display: inline-flex;
+    	background: #883442;
+    	padding: 0;
+    	margin: 0;
+
+    }
+    .menu-opened .new-texture-btn {
+    	box-shadow: inset 5px -5px 5px rgba(0, 0, 0, 0.3);
+    }
+
+
+
+    .popup-menu {
+    	display: absolute;
+    	left: 0;
+    	bottom: 0;
+    	z-index: 9999;
+    	display: none;
+    	background: #293340;
+    	box-shadow: 0 0 100px black;
+
+    	display: none;
+    }
+
+    .menu-opened .popup-menu {
+    	display: flex;
+    	flex-direction: row;
+    	justify-content: start;
+    	flex-wrap: wrap;
+    }
+
+    .popup-item {
+    	display: inline-block;
+    	font-size: 0.9em;
+    	flex: 1 1 50%;
+
+  		box-sizing: border-box;
+  		height: 100px;
+  		color: rgba(255, 255, 255, 0.7);
+  		text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+
+  		display: flex;
+		  justify-content: center;
+		  align-items: center;
+    }
+
+
+    .popup-open-obj {
+    	background: #24629a;
+    }
+    .popup-item-about {
+    	/*flex: 1 1 30%;*/
+    	background: #1f9053;
+    }
+
+    .popup-item-matherial {
+    	background: #c75252;
+    }
+
+    .popup-item-background {
+    	background: #ff8660;
     }
   </style>
+
+  <!-- <meta http-equiv="refresh" content="5"> -->
 </head>
 
 <body>
@@ -45,9 +116,31 @@
   <script src="https://threejs.org/examples/js/loaders/OBJLoader.js"></script>
 	<script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
 
+	<input type="file" id="objFileInp"  style="display: none" />
+  <input type="file" accept="image/*" style="display: none" id="textureFileInp" />
 
-  OBJ File: <input type="file" id="objFileInp" /><br />
-  Txture File: <input type="file" accept="image/*" id="textureFileInp" />
+
+  <div class="topbar">
+  	<div class="topbar-items">
+	  	<div class="top-button menu-button"><span>Menu</span></div>
+	  	<label for="objFileInp" class="top-button new-texture-btn"><span>New Texture</span></label>
+	  </div>
+  	<div class="popup-menu opened">
+  		<label class="popup-item popup-open-obj" for="objFileInp"><span>Open OBJ File</span></label>
+  		<div class="popup-item popup-item-matherial"><span>Change Matherial</span></div>
+  		<div class="popup-item popup-item-about"><span>About</span></div>
+  		<div class="popup-item popup-item-background"><span>Change Backgound</span></div>
+  		
+  	</div>
+  </div>
+	
+
+  <script type="text/javascript">
+
+  	document.querySelector('.menu-button').addEventListener('click', () => {
+  		document.body.classList.toggle('menu-opened');
+  	});
+  </script>
 
 
 
