--- a/vr/index.html
+++ b/vr/index.html
@@ -71,30 +71,8 @@
         effect = new THREE.StereoEffect(renderer);
 
         // Our initial control fallback with mouse/touch events in case DeviceOrientation is not enabled
-        controls = new THREE.OrbitControls(camera, element);
-        controls.target.set(
-          camera.position.x + 0.15,
-          camera.position.y,
-          camera.position.z
-        );
-        controls.noPan = true;
-        controls.noZoom = true;
+        controls = new DeviceOrientationControls( camera );
 
-        // Our preferred controls via DeviceOrientation
-        function setOrientationControls(e) {
-          if (!e.alpha) {
-            return;
-          }
-
-          controls = new THREE.DeviceOrientationControls(camera, true);
-          controls.connect();
-          controls.update();
-
-          element.addEventListener('click', fullscreen, false);
-
-          window.removeEventListener('deviceorientation', setOrientationControls, true);
-        }
-        window.addEventListener('deviceorientation', setOrientationControls, true);
 
         // Lighting
         var light = new THREE.PointLight(0x999999, 2, 100);
