--- a/vr/index.html
+++ b/vr/index.html
@@ -22,6 +22,7 @@
     <div id="webglviewer"></div>
 
     <script src="./js/three.min.js"></script>
+    <script src="./js/math-utils.js"></script>
     <script src="./js/StereoEffect.js"></script>
     <script src="./js/DeviceOrientationControls.js"></script>
     <script src="./js/OrbitControls.js"></script>
