--- a/v2/index.html
+++ b/v2/index.html
@@ -3,7 +3,12 @@
 	<head>
 		<title>three.js webgl - controls - deviceorientation</title>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+		<meta name="mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-capable" content="yes">
+
+		<!-- possible content values: default, black or black-translucent -->
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0 viewport-fit=cover">
 		<link type="text/css" rel="stylesheet" href="main.css">
 	</head>
 	<body>
