--- a/hitest/index.html
+++ b/hitest/index.html
@@ -52,7 +52,7 @@
         // https://github.com/tensorflow/tfjs-models/tree/master/speech-commands
 
         // the link to your model provided by Teachable Machine export panel
-        const URL = "http://127.0.0.1:8080/";
+        const URL = "/hitest/";
 
         let hiCounter = 0;
 
