--- a/hitest/index.html
+++ b/hitest/index.html
@@ -52,7 +52,7 @@
         // https://github.com/tensorflow/tfjs-models/tree/master/speech-commands
 
         // the link to your model provided by Teachable Machine export panel
-        const URL = "/hitest/";
+        const URL = "https://kadymov.github.io/hitest/";
 
         let hiCounter = 0;
 
