--- a/tennis.html
+++ b/tennis.html
@@ -112,7 +112,7 @@
 	</div>
 
 	<video id="player" autoplay></video>
-	<video id="camera" autoplay></video>
+	<video id="camera" autoplay style="opacity: 0.5"></video>
 
 	<script type="text/javascript">
 		(async () => {
