--- a/mil.html
+++ b/mil.html
@@ -66,6 +66,11 @@
             background-color: #bdc3c7;
             cursor: not-allowed;
         }
+        .fact {
+            margin-top: 15px;
+            font-size: 1em;
+            color: #ecf0f1;
+        }
     </style>
 </head>
 <body>
@@ -74,6 +79,7 @@
     <div class="question" id="question"></div>
     <div class="options" id="options"></div>
     <div class="result" id="result"></div>
+    <div class="fact" id="fact"></div>
     <div class="money" id="money">Счёт: $0</div>
     <div class="hints">
         <button class="hint-button" id="hintButton" onclick="useHint()">Подсказка: 50/50 (осталось: <span id="hintCount">3</span>)</button>
@@ -85,152 +91,182 @@
         {
             question: "Какой древний город был разрушен извержением Везувия в 79 году н.э.?",
             options: ["Помпеи", "Рим", "Афины", "Карфаген"],
-            answer: "Помпеи"
+            answer: "Помпеи",
+            fact: "Помпеи были полностью погребены под слоем вулканического пепла и сохранились в почти первозданном виде до наших дней."
         },
         {
             question: "Какое государство первым приняло христианство как государственную религию?",
             options: ["Римская империя", "Византия", "Армения", "Франция"],
-            answer: "Армения"
+            answer: "Армения",
+            fact: "Армения стала первой страной, официально приняв христианство в 301 году н.э., что сделало её важным центром христианской культуры."
         },
         {
             question: "Какой полководец известен своими завоеваниями в Азии и Европе в IV веке до н.э.?",
             options: ["Юлий Цезарь", "Александр Македонский", "Ганнибал", "Наполеон"],
-            answer: "Александр Македонский"
+            answer: "Александр Македонский",
+            fact: "Александр Македонский создал одну из крупнейших империй древности, простиравшуюся от Греции до Индии."
         },
         {
             question: "Какая страна является родиной танго?",
             options: ["Испания", "Аргентина", "Мексика", "Чили"],
-            answer: "Аргентина"
+            answer: "Аргентина",
+            fact: "Танго зародилось в бедных районах Буэнос-Айреса в конце XIX века и стало символом аргентинской культуры."
         },
         {
             question: "Как называется архитектурный стиль, характерный для соборов XIII-XVI веков?",
             options: ["Барокко", "Готика", "Ренессанс", "Классицизм"],
-            answer: "Готика"
+            answer: "Готика",
+            fact: "Готический стиль известен своими высокими шпилями, стрельчатыми арками и витражами, создающими ощущение воздушности."
         },
         {
             question: "Какой договор положил конец Первой мировой войне?",
             options: ["Версальский договор", "Брестский мир", "Тильзитский мир", "Парижский договор"],
-            answer: "Версальский договор"
+            answer: "Версальский договор",
+            fact: "Версальский договор был подписан в 1919 году и стал одной из причин начала Второй мировой войны."
         },
         {
             question: "Какой остров считается местом ссылки Наполеона Бонапарта?",
             options: ["Корсика", "Сардиния", "Сицилия", "Святая Елена"],
-            answer: "Святая Елена"
+            answer: "Святая Елена",
+            fact: "Остров Святой Елены находится в Южной Атлантике и был выбран из-за своей изолированности для предотвращения побега Наполеона."
         },
         {
             question: "Как называется система управления, при которой власть передается по наследству?",
             options: ["Демократия", "Монархия", "Олигархия", "Теократия"],
-            answer: "Монархия"
+            answer: "Монархия",
+            fact: "Монархия существует уже тысячи лет и была основной формой правления в большинстве древних цивилизаций."
         },
         {
             question: "Какой город был столицей Золотой Орды?",
             options: ["Киев", "Сараево", "Сарай", "Казань"],
-            answer: "Сарай"
+            answer: "Сарай",
+            fact: "Сарай был одним из крупнейших городов средневековой Евразии и центром торговли между Востоком и Западом."
         },
         {
             question: "Какое произведение искусства было создано Микеланджело для Сикстинской капеллы?",
             options: ["Давид", "Пьетà", "Страшный суд", "Венера"],
-            answer: "Страшный суд"
+            answer: "Страшный суд",
+            fact: "Фреска 'Страшный суд' занимает целую стену капеллы и изображает момент второго пришествия Христа."
         },
         {
             question: "Какой язык является официальным в Бразилии?",
             options: ["Испанский", "Португальский", "Французский", "Английский"],
-            answer: "Португальский"
+            answer: "Португальский",
+            fact: "Бразилия — единственная португалоязычная страна в Южной Америке, что делает её уникальной среди соседей."
         },
         {
             question: "Какой документ провозгласил права человека и гражданина во время Французской революции?",
             options: ["Декларация независимости", "Большая хартия вольностей", "Декларация прав человека", "Устав ООН"],
-            answer: "Декларация прав человека"
+            answer: "Декларация прав человека",
+            fact: "Декларация прав человека и гражданина 1789 года стала основой современных демократических принципов."
         },
         {
             question: "Какой народ создал письменность клинописью?",
             options: ["Египтяне", "Шумеры", "Китайцы", "Индейцы майя"],
-            answer: "Шумеры"
+            answer: "Шумеры",
+            fact: "Клинопись была одной из первых систем письма в мире и использовалась для записи хозяйственных операций."
         },
         {
             question: "Какой город был столицей Византийской империи?",
             options: ["Афины", "Константинополь", "Рим", "Венеция"],
-            answer: "Константинополь"
+            answer: "Константинополь",
+            fact: "Константинополь, ныне Стамбул, был ключевым городом, соединяющим Европу и Азию, и процветал более тысячи лет."
         },
         {
             question: "Какой философ написал труд 'Государство', описывающий идеальное общество?",
             options: ["Аристотель", "Платон", "Сократ", "Эпикур"],
-            answer: "Платон"
+            answer: "Платон",
+            fact: "В 'Государстве' Платон описывает идеальное общество, управляемое 'философами-королями', обладающими мудростью."
         },
         {
             question: "Какой регион мира известен как колыбель кофе?",
             options: ["Южная Америка", "Африка", "Аравийский полуостров", "Индия"],
-            answer: "Африка"
+            answer: "Африка",
+            fact: "Кофе был впервые обнаружен в Эфиопии, где пастух заметил, что его козы становятся энергичнее после употребления ягод кофейного дерева."
         },
         {
             question: "Какой исторический период называют 'темными веками'?",
             options: ["Средневековье", "Раннее Возрождение", "Поздняя античность", "Промышленная революция"],
-            answer: "Средневековье"
+            answer: "Средневековье",
+            fact: "Название 'темные века' связано с упадком культуры и науки после падения Римской империи, хотя это спорный термин."
         },
         {
             question: "Как называется театральная маска, символизирующая трагедию?",
             options: ["Комедия", "Мольер", "Трагедия", "Сатира"],
-            answer: "Трагедия"
+            answer: "Трагедия",
+            fact: "Маска трагедии символизирует скорбь и страдание и часто изображается вместе с маской комедии как символ театра."
         },
         {
             question: "Какой город считается колыбелью Ренессанса?",
             options: ["Рим", "Флоренция", "Венеция", "Неаполь"],
-            answer: "Флоренция"
+            answer: "Флоренция",
+            fact: "Флоренция стала центром искусства и культуры благодаря семье Медичи, покровительствовавшей художникам и учёным."
         },
         {
             question: "Какой политический режим существовал в СССР?",
             options: ["Капитализм", "Социализм", "Феодализм", "Античный строй"],
-            answer: "Социализм"
+            answer: "Социализм",
+            fact: "СССР был первым государством, попытавшимся реализовать идеи марксизма на практике, что повлияло на мировую историю XX века."
         },
         {
             question: "Какой архитектурный стиль характеризуется использованием куполов и минаретов?",
             options: ["Готика", "Барокко", "Исламский стиль", "Классицизм"],
-            answer: "Исламский стиль"
+            answer: "Исламский стиль",
+            fact: "Исламская архитектура известна своими геометрическими узорами, куполами и минаретами, которые служат для призыва к молитве."
         },
         {
             question: "Какой народ создал первую известную цивилизацию в Месопотамии?",
             options: ["Персы", "Шумеры", "Ассирийцы", "Вавилоняне"],
-            answer: "Шумеры"
+            answer: "Шумеры",
+            fact: "Шумеры изобрели колесо, письменность и одну из первых систем права, заложив основу для будущих цивилизаций."
         },
         {
             question: "Какой художник написал картину 'Звездная ночь'?",
             options: ["Клод Моне", "Пабло Пикассо", "Винсент Ван Гог", "Сальвадор Дали"],
-            answer: "Винсент Ван Гог"
+            answer: "Винсент Ван Гог",
+            fact: "'Звездная ночь' была написана Ван Гогом в психиатрической больнице и отражает его внутренний мир и эмоции."
         },
         {
             question: "Как называется процесс объединения Италии в XIX веке?",
             options: ["Рисорджименто", "Революция", "Реставрация", "Реформация"],
-            answer: "Рисорджименто"
+            answer: "Рисорджименто",
+            fact: "Рисорджименто стало движением за объединение разрозненных итальянских государств в единое королевство."
         },
         {
             question: "Какой город является столицей Австралии?",
             options: ["Сидней", "Мельбурн", "Канберра", "Брисбен"],
-            answer: "Канберра"
+            answer: "Канберра",
+            fact: "Канберра была выбрана компромиссом между Сиднеем и Мельбурном, двумя крупнейшими городами Австралии."
         },
         {
             question: "Какой исторический документ ограничил власть английского короля в 1215 году?",
             options: ["Декларация независимости", "Большая хартия вольностей", "Магна Карта", "Устав ООН"],
-            answer: "Магна Карта"
+            answer: "Магна Карта",
+            fact: "Магна Карта стала первым шагом к установлению верховенства закона над королевской властью в Англии."
         },
         {
             question: "Как называется явление, когда свет отклоняется в атмосфере, создавая радугу?",
             options: ["Рефракция", "Дифракция", "Отражение", "Дисперсия"],
-            answer: "Дисперсия"
+            answer: "Дисперсия",
+            fact: "Дисперсия света происходит из-за разной скорости распространения световых волн разных цветов в воде."
         },
         {
             question: "Какой музыкальный стиль возник в США в начале XX века?",
             options: ["Классика", "Джаз", "Рок", "Поп"],
-            answer: "Джаз"
+            answer: "Джаз",
+            fact: "Джаз зародился в Новом Орлеане и стал символом свободы и экспериментов в музыке."
         },
         {
             question: "Какой народ создал знаменитые наскальные рисунки в пустыне Наска?",
             options: ["Майя", "Ацтеки", "Инки", "Наска"],
-            answer: "Наска"
+            answer: "Наска",
+            fact: "Рисунки Наска видны только с воздуха и до сих пор остаются загадкой для учёных."
         },
         {
             question: "Какой философ впервые предложил гелиоцентрическую систему мира?",
             options: ["Аристотель", "Птолемей", "Николай Коперник", "Галилео Галилей"],
-            answer: "Николай Коперник"
+            answer: "Николай Коперник",
+            fact: "Коперник предложил модель, в которой Солнце находится в центре, что изменило представление о Вселенной."
         }
     ];
 
@@ -243,6 +279,7 @@
     const questionElement = document.getElementById('question');
     const optionsElement = document.getElementById('options');
     const resultElement = document.getElementById('result');
+    const factElement = document.getElementById('fact');
     const moneyElement = document.getElementById('money');
     const hintButton = document.getElementById('hintButton');
     const hintCountElement = document.getElementById('hintCount');
@@ -256,30 +293,31 @@
         const currentQuestion = shuffledQuestions[currentQuestionIndex];
         questionElement.textContent = currentQuestion.question;
         optionsElement.innerHTML = '';
+        factElement.textContent = '';
 
         currentQuestion.options.forEach(option => {
             const button = document.createElement('button');
             button.textContent = option;
-            button.addEventListener('click', () => checkAnswer(option));
+            button.addEventListener('click', () => checkAnswer(option, currentQuestion.fact));
             optionsElement.appendChild(button);
         });
     }
 
-    function checkAnswer(selectedOption) {
+    function checkAnswer(selectedOption, fact) {
         const currentQuestion = shuffledQuestions[currentQuestionIndex];
 
         if (selectedOption === currentQuestion.answer) {
             resultElement.textContent = "Правильно!";
             money += 1000;
             moneyElement.textContent = `Счёт: $${money}`;
+            factElement.textContent = `Интересный факт: ${fact}`;
+            currentQuestionIndex++;
+            setTimeout(loadQuestion, 5000);
         } else {
             resultElement.textContent = `Неправильно! Правильный ответ: ${currentQuestion.answer}`;
-            endGame();
-            return;
+            factElement.textContent = `Интересный факт: ${fact}`;
+            setTimeout(endGame, 5000);
         }
-
-        currentQuestionIndex++;
-        setTimeout(loadQuestion, 1000);
     }
 
     function useHint() {
