--- a/mil.html
+++ b/mil.html
@@ -267,6 +267,138 @@
             options: ["Аристотель", "Птолемей", "Николай Коперник", "Галилео Галилей"],
             answer: "Николай Коперник",
             fact: "Коперник предложил модель, в которой Солнце находится в центре, что изменило представление о Вселенной."
+        },
+        {
+            question: "Какой город был столицей древнего государства Урарту?",
+            options: ["Ереван", "Тбилиси", "Тейшебаини", "Туспа"],
+            answer: "Туспа",
+            fact: "Туспа, современный Ван в Турции, был главным городом Урарту и важным культурным центром."
+        },
+        {
+            question: "Какой полководец возглавил карфагенскую армию в войнах против Рима?",
+            options: ["Ганнибал", "Сципион", "Цезарь", "Пирр"],
+            answer: "Ганнибал",
+            fact: "Ганнибал прославился своим переходом через Альпы с войском, включая слонов, чтобы атаковать Рим."
+        },
+        {
+            question: "Какой философ был учителем Александра Македонского?",
+            options: ["Сократ", "Платон", "Аристотель", "Эпикур"],
+            answer: "Аристотель",
+            fact: "Аристотель обучал Александра Македонского в течение нескольких лет, оказав значительное влияние на его мировоззрение."
+        },
+        {
+            question: "Какой город был столицей древнего государства Шумер?",
+            options: ["Ур", "Вавилон", "Ниневия", "Ашшур"],
+            answer: "Ур",
+            fact: "Ур был одним из самых богатых и влиятельных городов Шумера и известен своими зиккуратами."
+        },
+        {
+            question: "Какой император Римской империи принял христианство?",
+            options: ["Август", "Константин", "Нерон", "Диоклетиан"],
+            answer: "Константин",
+            fact: "Константин Великий легализовал христианство в Римской империи с помощью Миланского эдикта в 313 году н.э."
+        },
+        {
+            question: "Какой народ создал знаменитые пирамиды в долине Нила?",
+            options: ["Нубийцы", "Египтяне", "Эфиопы", "Ливийцы"],
+            answer: "Египтяне",
+            fact: "Египтяне построили пирамиды как гробницы для своих фараонов, символизирующие их связь с богами."
+        },
+        {
+            question: "Какой город был столицей древнего государства Ассирия?",
+            options: ["Ниневия", "Вавилон", "Ур", "Самарра"],
+            answer: "Ниневия",
+            fact: "Ниневия была крупнейшим городом Ассирийской империи и известна своей библиотекой глиняных табличек."
+        },
+        {
+            question: "Какой философ написал диалог 'Федон', описывающий последние часы жизни Сократа?",
+            options: ["Аристотель", "Платон", "Эпикур", "Гераклит"],
+            answer: "Платон",
+            fact: "В 'Федоне' Платон исследует вопросы бессмертия души и природы человеческого существования."
+        },
+        {
+            question: "Какой город был столицей древнего государства Хетты?",
+            options: ["Хаттуса", "Трои", "Микены", "Кносс"],
+            answer: "Хаттуса",
+            fact: "Хаттуса была центром хеттской цивилизации и известна своими массивными городскими стенами."
+        },
+        {
+            question: "Какой народ создал знаменитый храм Ангкор-Ват?",
+            options: ["Тайцы", "Кхмеры", "Вьетнамцы", "Лаосцы"],
+            answer: "Кхмеры",
+            fact: "Ангкор-Ват был построен как индуистский храм, но позже стал буддийским святилищем."
+        },
+        {
+            question: "Какой город был столицей древнего государства Персия?",
+            options: ["Персеполь", "Сузы", "Экбатана", "Пасаргады"],
+            answer: "Персеполь",
+            fact: "Персеполь был церемониальной столицей Персидской империи и символизировал её могущество."
+        },
+        {
+            question: "Какой полководец возглавил македонскую армию в битве при Хайреонефеле?",
+            options: ["Александр Македонский", "Филипп II", "Пирр", "Антигон"],
+            answer: "Александр Македонский",
+            fact: "Битва при Хайреонефеле стала одной из ключевых побед Александра в его завоевании Персии."
+        },
+        {
+            question: "Какой город был столицей древнего государства Лидия?",
+            options: ["Сарды", "Эфес", "Милет", "Галикарнас"],
+            answer: "Сарды",
+            fact: "Сарды были известны своим богатством и легендарным царём Крезом, который изобрёл монеты."
+        },
+        {
+            question: "Какой философ написал трактат 'О природе вещей'?",
+            options: ["Лукреций", "Сенека", "Цицерон", "Эпикур"],
+            answer: "Лукреций",
+            fact: "В своём трактате Лукреций развивал идеи атомизма и материализма, опираясь на учение Эпикура."
+        },
+        {
+            question: "Какой город был столицей древнего государства Финикия?",
+            options: ["Тир", "Сидон", "Библ", "Карфаген"],
+            answer: "Тир",
+            fact: "Тир был важнейшим торговым центром Финикии и известен производством пурпурной краски."
+        },
+        {
+            question: "Какой полководец возглавил римскую армию в битве при Заме?",
+            options: ["Сципион", "Ганнибал", "Цезарь", "Помпей"],
+            answer: "Сципион",
+            fact: "Битва при Заме стала решающей победой Рима над Карфагеном во Второй Пунической войне."
+        },
+        {
+            question: "Какой город был столицей древнего государства Элам?",
+            options: ["Сузы", "Персеполь", "Экбатана", "Пасаргады"],
+            answer: "Сузы",
+            fact: "Сузы были важным культурным и политическим центром Элама и позже стали частью Персидской империи."
+        },
+        {
+            question: "Какой философ написал трактат 'Об обязанностях'?",
+            options: ["Цицерон", "Сенека", "Эпиктет", "Марк Аврелий"],
+            answer: "Цицерон",
+            fact: "В трактате 'Об обязанностях' Цицерон исследует вопросы морали и общественного долга."
+        },
+        {
+            question: "Какой город был столицей древнего государства Хорезм?",
+            options: ["Ургенч", "Самарканд", "Бухара", "Хива"],
+            answer: "Ургенч",
+            fact: "Ургенч был важным торговым центром на Великом шёлковом пути и известен своими мечетями."
+        },
+        {
+            question: "Какой полководец возглавил персидскую армию в битве при Марафоне?",
+            options: ["Дарий I", "Ксеркс I", "Мардоний", "Артаксеркс"],
+            answer: "Дарий I",
+            fact: "Битва при Марафоне стала первой крупной победой греков над персами в Греко-персидских войнах."
+        },
+        {
+            question: "Какой город был столицей древнего государства Минойская цивилизация?",
+            options: ["Кносс", "Микены", "Тиринф", "Афины"],
+            answer: "Кносс",
+            fact: "Кносс был центром минойской цивилизации и известен своим огромным дворцом."
+        },
+        {
+            question: "Какой философ написал трактат 'О граде Божием'?",
+            options: ["Августин", "Фома Аквинский", "Ансельм Кентерберийский", "Блаженный Иероним"],
+            answer: "Августин",
+            fact: "В трактате 'О граде Божием' Августин исследует вопросы теологии и политической философии."
         }
     ];
 
@@ -292,6 +424,7 @@
 
         const currentQuestion = shuffledQuestions[currentQuestionIndex];
         questionElement.textContent = currentQuestion.question;
+        resultElement.textContent = '';
         optionsElement.innerHTML = '';
         factElement.textContent = '';
 
@@ -346,6 +479,7 @@
         optionsElement.innerHTML = '';
         resultElement.textContent = `Вы заработали: $${money}`;
         hintButton.style.display = 'none';
+        factElement.textContent = '';
     }
 
     loadQuestion();
