--- a/mil.html
+++ b/mil.html
@@ -84,6 +84,8 @@
     <div class="hints">
         <button class="hint-button" id="hintButton" onclick="useHint()">Подсказка: 50/50 (осталось: <span id="hintCount">3</span>)</button>
     </div>
+
+    <div class="debug"></div>
 </div>
 
 <script>
@@ -415,6 +417,9 @@
     const moneyElement = document.getElementById('money');
     const hintButton = document.getElementById('hintButton');
     const hintCountElement = document.getElementById('hintCount');
+    const debugElement = document.getElementById('debug');
+    
+    
 
     function loadQuestion() {
         if (currentQuestionIndex >= shuffledQuestions.length) {
@@ -483,6 +488,8 @@
     }
 
     loadQuestion();
+
+    debugElement.innerText = `В базе ${questions.length} вопросов`;
 </script>
 </body>
 </html>
