--- a/mil.html
+++ b/mil.html
@@ -73,7 +73,8 @@
         }
 
         .debug {
-            font-size: 0.9em;
+            font-size: 0.8em;
+            margin-top: 12px;
         }
     </style>
 </head>
