--- a/inp.html
+++ b/inp.html
@@ -26,6 +26,7 @@
             flex: 1;
             height: 30px;
             margin-right: 10px;
+            font-size: 16px;
         }
         #sendButton {
             height: 30px;
