--- a/lets-talk.html
+++ b/lets-talk.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Автоматический Диалог</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <style>
         html, body { height: 100%; margin: 0; padding: 0; }
         body {
