--- a/lets-talk.html
+++ b/lets-talk.html
@@ -65,7 +65,7 @@
                 const response = await fetch('https://openrouter.ai/api/v1/chat/completions ',  {
                     method: 'POST',
                     headers: {
-                        'Authorization': `Bearer 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`,
+                        'Authorization': 'Bearer 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',
                         'Content-Type': 'application/json'
                     },
                     body: JSON.stringify({
