--- a/war.html
+++ b/war.html
@@ -450,9 +450,10 @@
         <li>Ближний Восток и Иран. Срыв возобновления ядерной сделки и обострение в секторе Газа усиливают «теневую войну» дронов и кибератак между Ираном и Израилем. К 2030 г. возможен «пороговый ядерный статус» Тегерана; Саудовская Аравия намекает, что «последует по стопам». IV. Цифры, которые рассказывают историю</li>
         <li>2,2 трлн долл. — совокупные военные бюджеты G-20 в 2023 г. (+9 % г/г).</li>
         <li>89 % — доля мировых вооружений, поставляемых пятёркой экспортеров: США, Россия, Франция, КНР, Германия.</li>
-        <li>17 млрд долл. — объём рынка военных космических услуг в 2023 г.; прогноз — до 46 млрд к 2033 г. V. Возможные сценарии к середине 2030-х</li>
-
+        <li>17 млрд долл. — объём рынка военных космических услуг в 2023 г.; прогноз — до 46 млрд к 2033 г.</li>
     </ul>
+	
+    <h2>V. Возможные сценарии к середине 2030-х</h2>
     <h3 id='сценарий-1-конструктор-многополярности'>Сценарий 1. «Конструктор многополярности»</h3>
     <p>Мир дрейфует к фрагментированному порядку: региональные блоки («Большой Ближний Восток», «Индо-Тихоокеанский пояс», «Европа-Плюс») выстраивают локальные балансы. Больших войн удаётся избегать ценой всплеска прокси-конфликтов и нарастающей «серой зоны» киберударов. Вероятность – 45 %.</p>
     <h3 id='сценарий-2-техно-гонка-без-правил'>Сценарий 2. «Техно-гонка без правил»</h3>
