--- a/war/index.html
+++ b/war/index.html
@@ -21,7 +21,7 @@
     <p>Космос. 2024-й стал годом, когда число спутников Starlink перешагнуло отметку 5000. Военные видят в этом источник сверхустойчивой связи, но и новую уязвимость: Россия и КНР тестируют кинетические перехватчики на высоте 300–500 км. Сценарий «orbital pearl harbour» уже обсуждается в Пентагоне.</p>
     <p>Гиперзвук. Число стран, объявивших о гиперзвуковом оружии, выросло до семи; контрмеры запаздывают на 5–7 лет, что создаёт «стратегическое окно» — самый опасный этап любой гонки вооружений.</p>
     <blockquote>
-        <p><strong>«10 минут до цели»: гиперзвук как новый фактор стратегической неожиданности</strong> </p>
+        <h4>«10 минут до цели»: гиперзвук как новый фактор стратегической неожиданности</h4>
         <p>Дальность новейших планирующих блоков типа DF-ZF (КНР) и «Авангард» (РФ) превышает 3 000 км при скорости 6–10 Махов: время подлёта – 7–12 мин., что втрое быстрее классических БРСД. По расчётам RAND, сегодняшние системы ПРО способны перехватывать не более 15 % гиперзвуковых целей; окно уязвимости сохранится как минимум до 2031 г.</p>
         <p>Пентагон отвечает программой Glide Phase Interceptor (бюджет $4,5 млрд), но даже в оптимистичном графике серийные поставки начнутся лишь в 2029 г. Стратеги называют период 2025–2030 «зоной повышенного искушения»: атакующая сторона может рассчитывать на «односторонний козырь», провоцируя гонку превентивного давления.</p>
     </blockquote>
@@ -53,7 +53,7 @@
 
     </ul>
     <blockquote>
-        <p><strong>ЧВК 2.0: рынок вооружённых алгоритмов</strong> </p>
+        <h4>ЧВК 2.0: рынок вооружённых алгоритмов</h4>
         <p>«Group-4i», «Red Sky» (США), «Frontier Aegis» (ОАЭ) и «Синичка Pro» (РФ) предлагают «дрон-как-сервис»: полный цикл — от закупки БПЛА до эксплуатации и анализа боевых данных. Контрактный пакет ротного масштаба (60–80 беспилотников, наземная станция, ПВО малого радиуса) оценивается в $45–60 млн. </p>
         <p>Страховые компании требуют для полигонных испытаний таких ЧВК уровня сертификации ISO/IEC 42001-AI (пилотный стандарт 2024 г.), что фактически приравнивает их к оборонным подрядчикам первого круга. </p>
         <p>Прогноз Frost &amp; Sullivan: к 2028 г. глобальный оборот «алгоритмических ЧВК» превысит $6,8 млрд, из них 40 % придётся на операции в «серой зоне» — охрану трубопроводов, киберпатрули портов и рудников, а также сопровождение гуманитарных миссий ООН.</p>
@@ -63,7 +63,7 @@
 
     <p>Успех или провал переговоров США–КНР по «горячей линии» в космосе. Доля беспилотников в тактических ударных миссиях НАТО (цель – 35 % к 2030 г.): чем выше, тем глубже автоматизация конфликта. Расширение «зон безопасности» вокруг полупроводниковых фабрик на Тайване и в Южной Корее: если в стратегии США появится пункт о «военно-промышленном щите» над TSMC, риск военного столкновения возрастёт. Ритм пусков северокорейских МБР: каждый кластер из трёх и более испытаний в год — явный сигнал углубления ракетного обмена с Москвой или Пекином.</p>
     <blockquote>
-        <p><strong>Orbital Pearl Harbor: насколько хрупки мега-созвездия спутников</strong> </p>
+        <h4>Orbital Pearl Harbor: насколько хрупки мега-созвездия спутников</h4>
         <p>На орбите LEO (&gt;1 500 км) уже работает свыше 7 400 коммерческих аппаратов, из них 65 % — Starlink, OneWeb, Jilin-1.</p>
         <p>Испытания АСАТ-оружия: РФ (2021) — высота 480 км; КНР (2007) — 860 км; США (2008) — 250 км. Все три продемонстрировали техническую готовность к «кинетическому захолустью». </p>
         <p>По модели Aerospace Corp., одновременный вывод из строя 50–60 спутников навигации и связи может парализовать до 38 % глобального торгового флота и 17 % воздушного трафика в течение 72 часов. </p>
