--- a/war/index.html
+++ b/war/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width initial-scale=1'>
-    <title>Статья</title>
+    <title>Грозовые облака и окна возможностей: мировая военно-политическая система на пороге 2030-х</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
