--- a/war/index.html
+++ b/war/index.html
@@ -102,7 +102,7 @@
     <ul>
         <li>Starlink и <span class="info" title="Британская спутниковая компания">OneWeb</span> стали «коммерческим столбом» украинского фронта, показав, что крупная корпорация способна влиять на ход войны.</li>
         <li><span class="info" title="Французская энергетическая компания">Schneider Electric</span>, <span class="info" title="Китайская технологическая компания">Huawei</span> и <span class="info" title="Немецкий промышленный концерн">Siemens</span> — лидеры по поставкам критической электроники. Конвейер санкций заставляет армии заранее создавать <span class="info" title="Складские запасы критических компонентов">«бойлерплейты»</span> — складские запасы чипов на 3–5 лет.</li>
-        <li>Появление ЧВК «второго поколения» — фирм, специализирующихся не на пехоте, а на управлении <span class="info" title="Беспилотные летательные аппараты">БПЛА</span> и киберзащите инфраструктуры. Оценочно, уже в 2026 г. рынок частных дрон-услуг превысит 3 млрд долл. VIII. Ключевые индикаторы, за которыми стоит следить</li>
+        <li>Появление ЧВК «второго поколения» — фирм, специализирующихся не на пехоте, а на управлении <span class="info" title="Беспилотные летательные аппараты">БПЛА</span> и киберзащите инфраструктуры. Оценочно, уже в 2026 г. рынок частных дрон-услуг превысит 3 млрд долл.</li>
 
     </ul>
     <blockquote>
@@ -112,6 +112,8 @@
         <p>Прогноз <span class="info" title="Международная консалтинговая компания">Frost &amp; Sullivan</span>: к 2028 г. глобальный оборот «алгоритмических ЧВК» превысит $6,8 млрд, из них 40 % придётся на операции в <span class="info" title="Действия между миром и войной">«серой зоне»</span> — охрану трубопроводов, киберпатрули портов и рудников, а также сопровождение гуманитарных миссий ООН.</p>
     </blockquote>
 
+    <h2>VIII. Ключевые индикаторы, за которыми стоит следить</h2>
+    
     <img src="img2.svg" class="right" />
 
     <p>Успех или провал переговоров США–КНР по «горячей линии» в космосе. Доля беспилотников в тактических ударных миссиях НАТО (цель – 35 % к 2030 г.): чем выше, тем глубже автоматизация конфликта. Расширение «зон безопасности» вокруг полупроводниковых фабрик на Тайване и в Южной Корее: если в стратегии США появится пункт о «военно-промышленном щите» над <span class="info" title="Taiwan Semiconductor Manufacturing Company">TSMC</span>, риск военного столкновения возрастёт. Ритм пусков северокорейских <span class="info" title="Межконтинентальные баллистические ракеты">МБР</span>: каждый кластер из трёх и более испытаний в год — явный сигнал углубления ракетного обмена с Москвой или Пекином.</p>
